[metadata]
name = api_hub
version = 1.0.0
description = API specification for Open API Hub project. This API is designed to manage users, projects, project members, API specifications, and project credentials.
long_description = file: README.md
keywords = OpenAPI Open API Hub API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
